<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmSubmitActivity">

    <TextView
        android:id="@+id/organization_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="40"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/submit_location_msg"
        android:textColor="#E91E63"
        android:textColorLink="#E91E63"
        android:textSize="32sp"
        android:layout_marginTop="57sp"
        />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter Details"
        android:textColor="#5E1E0B"/>


    <EditText
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:ems="10"
        android:padding="10dp"
        android:background="@xml/input"
        android:layout_marginBottom="10dp"
        android:inputType="text"/>


    <Button
        android:gravity="center_vertical|center_horizontal"
        android:id="@+id/btn_start_location_updates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:onClick="startLocationButtonClick"
        android:text="@string/start_updates"
        />

    <Button
        android:gravity="center_vertical|center_horizontal"
        android:id="@+id/btn_stop_location_updates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:enabled="false"
        android:onClick="stopLocationButtonClick"
        android:text="@string/stop_updates" />

    <Button
        android:gravity="center_vertical|center_horizontal"
        android:id="@+id/button_call_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"

        android:text="Submit Location"
/>




    <Button
        android:gravity="center_vertical|center_horizontal"
        android:id="@+id/btn_get_last_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:onClick="showLastKnownLocation"
        android:text="@string/get_last_location" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:gravity="center_horizontal"
        android:text="Location updates will be received only when app is foreground" />
    <TextView
        android:id="@+id/location_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="470dp"
        android:textColor="#333"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/updated_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="12sp" />



</RelativeLayout>