<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="14dp"
            android:orientation="vertical"
            android:padding="20dp">


            <TextView
                android:id="@+id/title"
                android:layout_width="351dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:layout_gravity="center"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/title"
                android:textColor="#FF9C27B0"
                android:textSize="30sp"
                android:visibility="visible"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/organization_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/organization_title"
                android:textColor="#E91E63"
                android:textColorLink="#E91E63"
                android:textSize="32sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="268dp"
                android:layout_height="137dp"
                android:layout_gravity="center"
                android:layout_weight="40"
                app:srcCompat="@mipmap/ic_launcher_foreground" />

<!--            <Button
                android:id="@+id/home_grv_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:text="Submit New Grievance"
                android:textColor="#FFFFFF"
                android:background="#E91E63"/>

            <Button
                android:id="@+id/home_list_btn"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:background="#E91E63"
                android:text="My Grievances"
                android:textColor="#FFFFFF" />-->

            <Button
                android:id="@+id/home_grv_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:text="हिंदी"
                android:textColor="#FFFFFF"
                android:background="#E91E63"
                />

            <Button
                android:id="@+id/home_list_btn"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:background="#E91E63"
                android:text="Register Grievance"
                android:textColor="#FFFFFF" />
            <Button
                android:id="@+id/login"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:background="#E91E63"
                android:text="Login"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="364dp"
                android:layout_height="89dp"
                android:layout_weight="40"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/website_url"
                android:textColor="#E91E63"
                android:textColorLink="#E91E63"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:textColor="#FF9C27B0"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/helpline"
                android:textSize="30sp" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
